templates para testing

--- a/templates/_source/base.haml
+++ b/templates/_source/base.haml
@@ -2,7 +2,7 @@
 !!!
 %head
     %title Merlina Textil, arte en macram&eacute;
-    /%base{:href=>"http://50.116.1.212/merlinatextil/"}
+    %base{:href=>"/"}
     %link{:href=>"static/css/styles.css", :media=>"screen", :rel=>"stylesheet"}
     %link{:rel=>"stylesheet",:media=>"all",:href=>"static/css/jquery.fancybox-1.3.4.css"}
     %script{:type=>"text/javascript",:src=>"static/js/jquery.min.1.6.js"}
