--- a/templates/_source/category.haml
+++ b/templates/_source/category.haml
@@ -1,5 +1,4 @@
 {% extends 'templates/base.html' %}
-{% load thumbnail %}
   
 {% block content %}
 .content
@@ -9,8 +8,8 @@
     %h2 Portfolio
     .product-list
         {% for product in products %}
-        %a.item{:href=>"/{{ product.category.name }}/{{ product.name }}.html",:rel=>"gallery"}
-            %img{:src=>"{% thumbnail product.image 145x145 box=product.list_page_cropping crop detail %}"}       
+        %a.item{:href=>"/{{ product.fields.category }}/{{ product.fields.name }}.html",:rel=>"gallery"}
+            %img{:width=>"145",:src=>"http://50.116.1.212:9000/uploads/{{ product.fields.image }}"}       
 
         {% endfor %}
         //%a.item{:href=>"item.html",:rel=>"gallery"}
