--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <head>
   <title>Merlina Textil, arte en macram&eacute;</title>
-  <!-- %base{:href=>"http://50.116.1.212/merlinatextil/"} -->
+  <base href='/' />
   <link href='static/css/styles.css' media='screen' rel='stylesheet' />
   <link href='static/css/jquery.fancybox-1.3.4.css' media='all' rel='stylesheet' />
   <script src='static/js/jquery.min.1.6.js' type='text/javascript'></script>
