--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,7 +2,7 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 17, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, c:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -24,45 +24,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 20, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 20, c:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 body {
   line-height: 1;
 }
 
-/* line 22, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, c:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 24, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, c:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 26, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, c:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 28, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, c:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 101, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 101, c:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 30, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, c:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 114, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 114, c:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block;
 }
@@ -72,304 +72,16 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
  *
  * Licensed under GPL and MIT.
  */
-/* line 13, ../../templates/_source/sass/_grid.scss */
+/* line 13, c:/xampp/htdocs/ufront/templates/_source/sass/_grid.scss */
 .container {
   margin-left: auto;
   margin-right: auto;
   width: 934px;
 }
-/* line 15, ../../templates/_source/sass/_grid.scss */
-.container .logo {
-  display: inline;
-  float: left;
-  margin-left: 10px;
-  margin-right: 10px;
-  width: 369.167px;
-  margin-left: 0;
-}
-/* line 19, ../../templates/_source/sass/_grid.scss */
-.container .nav.main {
-  display: inline;
-  float: left;
-  margin-left: 10px;
-  margin-right: 10px;
-  width: 524.833px;
-  margin-right: 0;
-}
-/* line 24, ../../templates/_source/sass/_grid.scss */
-.container .footer .nav.links {
-  display: inline;
-  float: left;
-  margin-left: 10px;
-  margin-right: 10px;
-  width: 131.775px;
-  margin-left: 0;
-}
-/* line 28, ../../templates/_source/sass/_grid.scss */
-.container .footer .copy {
-  display: inline;
-  float: left;
-  margin-left: 10px;
-  margin-right: 10px;
-  width: 762.225px;
-  margin-right: 0;
-}
 
-/* line 35, ../../templates/_source/sass/_grid.scss */
-.container.inner .content {
-  margin-left: 3px;
-  width: 890px;
-  padding: 20px;
-}
-/* line 39, ../../templates/_source/sass/_grid.scss */
-.container.inner .content .product-list {
-  margin-left: auto;
-  margin-right: auto;
-  width: 934px;
-  overflow: hidden;
-}
-/* line 43, ../../templates/_source/sass/_grid.scss */
-.container.inner .content .product-list .item {
-  display: inline;
-  float: left;
-  margin-left: 10px;
-  margin-right: 10px;
-  width: 199.5px;
-}
-
-/* line 6, ../../templates/_source/sass/_layout.scss */
-.container .logo {
-  margin-left: 13px;
-}
-/* line 9, ../../templates/_source/sass/_layout.scss */
-.container .nav.main {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  overflow: hidden;
-  *zoom: 1;
-  margin: 47px 0 0 0;
-}
-/* line 12, ../../templates/_source/sass/_layout.scss */
-.container .nav.main li {
-  list-style-image: none;
-  list-style-type: none;
-  margin-left: 0px;
-  white-space: nowrap;
-  display: inline;
-  float: left;
-  padding-left: 4px;
-  padding-right: 4px;
-  margin-right: 5px;
-}
-/* line 48, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
-.container .nav.main li:first-child, .container .nav.main li.first {
-  padding-left: 0;
-}
-/* line 49, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
-.container .nav.main li:last-child {
-  padding-right: 0;
-}
-/* line 50, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
-.container .nav.main li.last {
-  padding-right: 0;
-}
-
-/* line 19, ../../templates/_source/sass/_layout.scss */
-.container.home .content {
-  height: 742px;
-}
-/* line 21, ../../templates/_source/sass/_layout.scss */
-.container.home .content .home-slide {
-  width: 479px;
-  height: 454px;
-  margin: 0 0 0 53px;
-  top: 168px;
-  position: absolute;
-}
-/* line 27, ../../templates/_source/sass/_layout.scss */
-.container.home .content .home-slide h2 {
-  position: absolute;
-  margin-left: 520px;
-  top: 200px;
-  width: 370px;
-  -moz-transform: rotate(-2deg);
-  -webkit-transform: rotate(-2deg);
-  -o-transform: rotate(-2deg);
-  -ms-transform: rotate(-2deg);
-  transform: rotate(-2deg);
-}
-/* line 35, ../../templates/_source/sass/_layout.scss */
-.container.home .content .avatar-bio {
-  background: url(../img/avatarbio.png) no-repeat 0 0;
-  position: absolute;
-  height: 131px;
-  margin-left: 804px;
-  position: absolute;
-  top: 141px;
-  width: 108px;
-}
-/* line 43, ../../templates/_source/sass/_layout.scss */
-.container.home .content .avatar-bio a {
-  height: 131px;
-  display: block;
-}
-
-/* line 52, ../../templates/_source/sass/_layout.scss */
-.container.inner .header {
-  height: 159px;
-}
-/* line 55, ../../templates/_source/sass/_layout.scss */
-.container.inner .logo {
-  margin-left: 7px;
-}
-/* line 58, ../../templates/_source/sass/_layout.scss */
-.container.inner .content {
-  padding-bottom: 80px;
-}
-/* line 60, ../../templates/_source/sass/_layout.scss */
-.container.inner .content h2 {
-  margin-bottom: 10px;
-  margin-top: -55px;
-  padding-left: 30px;
-}
-/* line 65, ../../templates/_source/sass/_layout.scss */
-.container.inner .content .product-list {
-  padding: 1px;
-}
-/* line 67, ../../templates/_source/sass/_layout.scss */
-.container.inner .content .product-list .item {
-  margin-top: 30px;
-}
-/* line 72, ../../templates/_source/sass/_layout.scss */
-.container.inner .content.bio .picture {
-  float: left;
-  width: 300px;
-  padding: 10px 10px 30px;
-  margin-right: 30px;
-  margin-bottom: 15px;
-}
-
-/* line 83, ../../templates/_source/sass/_layout.scss */
-.logo {
-  text-indent: -9999px;
-  height: 102px;
-}
-/* line 86, ../../templates/_source/sass/_layout.scss */
-.logo a {
-  display: block;
-  height: 102px;
-}
-
-/* line 93, ../../templates/_source/sass/_layout.scss */
-.footer .nav.links {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  overflow: hidden;
-  *zoom: 1;
-}
-/* line 95, ../../templates/_source/sass/_layout.scss */
-.footer .nav.links li {
-  list-style-image: none;
-  list-style-type: none;
-  margin-left: 0px;
-  white-space: nowrap;
-  display: inline;
-  float: left;
-  padding-left: 4px;
-  padding-right: 4px;
-}
-/* line 48, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
-.footer .nav.links li:first-child, .footer .nav.links li.first {
-  padding-left: 0;
-}
-/* line 49, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
-.footer .nav.links li:last-child {
-  padding-right: 0;
-}
-/* line 50, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
-.footer .nav.links li.last {
-  padding-right: 0;
-}
-/* line 98, ../../templates/_source/sass/_layout.scss */
-.footer .nav.links .tw a, .footer .nav.links .fb a {
-  width: 31px;
-}
-/* line 101, ../../templates/_source/sass/_layout.scss */
-.footer .nav.links .fb a {
-  background-position: -774px 0;
-}
-/* line 104, ../../templates/_source/sass/_layout.scss */
-.footer .nav.links .tw a {
-  background-position: -809px 0;
-}
-/* line 107, ../../templates/_source/sass/_layout.scss */
-.footer .nav.links .flickr a {
-  width: 50px;
-  background-position: -845px 0;
-}
-/* line 112, ../../templates/_source/sass/_layout.scss */
-.footer li {
-  text-indent: -9999px;
-}
-/* line 113, ../../templates/_source/sass/_layout.scss */
-.footer li a {
-  display: block;
-  height: 33px;
-}
-/* line 119, ../../templates/_source/sass/_layout.scss */
-.footer .copy a {
-  width: 75px;
-}
-
-/* line 124, ../../templates/_source/sass/_layout.scss */
-.container.fancybox {
-  padding-top: 10px;
-  width: 640px;
-  text-align: center;
-}
-/* line 128, ../../templates/_source/sass/_layout.scss */
-.container.fancybox .content {
-  overflow: hidden;
-}
-/* line 131, ../../templates/_source/sass/_layout.scss */
-.container.fancybox .info, .container.fancybox h2 {
-  text-align: left;
-  padding: 10px;
-}
-/* line 135, ../../templates/_source/sass/_layout.scss */
-.container.fancybox h2 {
-  margin-bottom: 0;
-  padding-bottom: 0;
-}
-
-/* line 142, ../../templates/_source/sass/_layout.scss */
-.container.fancybox .prev, .container.fancybox .next {
-  display: block;
-  width: 67px;
-  height: 67px;
-  position: absolute;
-  margin-top: -310px;
-  background: url(../img/gallery_sprite.png) no-repeat 0 0;
-}
-/* line 149, ../../templates/_source/sass/_layout.scss */
-.container.fancybox .prev span, .container.fancybox .next span {
-  display: none;
-}
-/* line 153, ../../templates/_source/sass/_layout.scss */
-.container.fancybox .prev {
-  margin-left: 30px;
-}
-/* line 156, ../../templates/_source/sass/_layout.scss */
-.container.fancybox .next {
-  margin-left: 550px;
-  background-position: -513px 0;
-}
-
-/* line 5, ../../templates/_source/sass/_text.scss */
+/* line 5, c:/xampp/htdocs/ufront/templates/_source/sass/_text.scss */
 body {
-  font-family: Georgia;
+  font-family: Arial;
 }
 
 @font-face {
@@ -386,199 +98,4 @@ body {
   src: url("../fonts/helveticaltstd-blkcond-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/helveticaltstd-blkcond-webfont.woff") format("woff"), url("../fonts/helveticaltstd-blkcond-webfont.ttf") format("truetype"), url("../fonts/helveticaltstd-blkcond-webfont.svg#HelveticaLTStdBlackCondensed") format("svg");
   font-weight: normal;
   font-style: normal;
-}
-
-/* line 3, ../../templates/_source/sass/_forms.scss */
-.form {
-  border-top: 1px dashed #ddd;
-  padding-top: 10px;
-  margin-top: 20px;
-}
-/* line 8, ../../templates/_source/sass/_forms.scss */
-.form .field.char input,
-.form .field.text textarea {
-  border: 1px solid #ddd;
-  width: 32%;
-  padding: 5px;
-  font-family: Arial;
-  font-size: 1em;
-  color: #333333;
-}
-/* line 14, ../../templates/_source/sass/_forms.scss */
-.form label {
-  display: block;
-}
-/* line 18, ../../templates/_source/sass/_forms.scss */
-.form .field,
-.form label {
-  margin: 10px 0;
-}
-/* line 21, ../../templates/_source/sass/_forms.scss */
-.form .actions input {
-  border: 1px solid #dddddd;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  -o-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -khtml-border-radius: 4px;
-  border-radius: 4px;
-  font-family: 'HelveticaLTStdBlackCondensed';
-  font-size: .9em;
-  letter-spacing: 1pt;
-  line-height: 140%;
-  text-transform: uppercase;
-  color: white;
-  padding: 10px 15px;
-  background: #333333;
-  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #4d4d4d), color-stop(100%, #333333));
-  background-image: -webkit-linear-gradient(#4d4d4d, #333333);
-  background-image: -moz-linear-gradient(#4d4d4d, #333333);
-  background-image: -o-linear-gradient(#4d4d4d, #333333);
-  background-image: -ms-linear-gradient(#4d4d4d, #333333);
-  background-image: linear-gradient(#4d4d4d, #333333);
-}
-/* line 25, ../../templates/_source/sass/_forms.scss */
-.form .errorlist li {
-  color: #990000;
-  font-size: .85em;
-  line-height: 120%;
-}
-
-/* line 16, ../../templates/_source/sass/styles.scss */
-body {
-  background: url(../img/bodybg.png);
-}
-
-/* line 20, ../../templates/_source/sass/styles.scss */
-.logo {
-  background: url(../img/logo.jpg) no-repeat 0 0;
-  text-indent: -9999px;
-}
-
-/* line 26, ../../templates/_source/sass/styles.scss */
-.nav.main a {
-  font-family: 'FiveMinutesRegular';
-  font-size: 2.1em;
-  text-decoration: none;
-  text-transform: lowercase;
-  text-shadow: 0px 0px 1px #233a6b;
-  color: #233a6b;
-  letter-spacing: 0.05em;
-}
-
-/* line 33, ../../templates/_source/sass/styles.scss */
-.footer ul li a {
-  background: url(../img/footer-nav.png) no-repeat 0 0;
-}
-
-/* line 40, ../../templates/_source/sass/styles.scss */
-.container.home .content {
-  background: url(../img/home_bg.jpg) no-repeat 0 0;
-  -moz-box-shadow: 0px 9px 46px white;
-  -webkit-box-shadow: 0px 9px 46px white;
-  -o-box-shadow: 0px 9px 46px white;
-  box-shadow: 0px 9px 46px white;
-}
-/* line 43, ../../templates/_source/sass/styles.scss */
-.container.home .content .home-slide {
-  cursor: pointer;
-  background: url(../img/home_wonderwoman.png) no-repeat 0 0;
-}
-/* line 46, ../../templates/_source/sass/styles.scss */
-.container.home .content .home-slide h2 {
-  font-family: 'FiveMinutesRegular';
-  font-size: 4em;
-  text-decoration: none;
-  text-shadow: 0px 0px 1px black;
-  color: black;
-}
-/* line 50, ../../templates/_source/sass/styles.scss */
-.container.home .content .avatar-bio {
-  background: url(../img/avatarbio.png) no-repeat 0 0;
-}
-
-/* line 58, ../../templates/_source/sass/styles.scss */
-.container.inner .header {
-  background: url(../img/header.jpg) no-repeat 0 0;
-}
-/* line 61, ../../templates/_source/sass/styles.scss */
-.container.inner .content {
-  -moz-box-shadow: 0px 1px 1px #999999;
-  -webkit-box-shadow: 0px 1px 1px #999999;
-  -o-box-shadow: 0px 1px 1px #999999;
-  box-shadow: 0px 1px 1px #999999;
-  background: white;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  -o-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -khtml-border-radius: 4px;
-  border-radius: 4px;
-}
-/* line 65, ../../templates/_source/sass/styles.scss */
-.container.inner .content h2 {
-  font-family: 'HelveticaLTStdBlackCondensed';
-  color: #333333;
-  font-size: 1.6em;
-  letter-spacing: -0.6pt;
-}
-/* line 68, ../../templates/_source/sass/styles.scss */
-.container.inner .content h3 {
-  font-family: 'HelveticaLTStdBlackCondensed';
-  color: #333333;
-  font-size: 1.1em;
-  letter-spacing: -0.6pt;
-  line-height: 140%;
-  margin-bottom: 10px;
-}
-/* line 72, ../../templates/_source/sass/styles.scss */
-.container.inner .content p {
-  line-height: 140%;
-}
-/* line 76, ../../templates/_source/sass/styles.scss */
-.container.inner .content .product-list a {
-  text-decoration: none;
-}
-/* line 79, ../../templates/_source/sass/styles.scss */
-.container.inner .content .product-list .item {
-  text-align: center;
-}
-/* line 81, ../../templates/_source/sass/styles.scss */
-.container.inner .content .product-list .item img {
-  -moz-box-shadow: 0 0 1px #999999;
-  -webkit-box-shadow: 0 0 1px #999999;
-  -o-box-shadow: 0 0 1px #999999;
-  box-shadow: 0 0 1px #999999;
-  padding: 5px;
-}
-/* line 89, ../../templates/_source/sass/styles.scss */
-.container.inner .content.bio .picture {
-  /*@include rotate(-1.5deg) ;*/
-  -moz-box-shadow: 0px 2px 4px #999999;
-  -webkit-box-shadow: 0px 2px 4px #999999;
-  -o-box-shadow: 0px 2px 4px #999999;
-  box-shadow: 0px 2px 4px #999999;
-}
-
-/* line 97, ../../templates/_source/sass/styles.scss */
-.container.fancybox h2 {
-  font-family: 'HelveticaLTStdBlackCondensed';
-  color: #333333;
-  font-size: 1.1em;
-  letter-spacing: -0.6pt;
-  line-height: 140%;
-}
-/* line 100, ../../templates/_source/sass/styles.scss */
-.container.fancybox .info {
-  font-family: Arial;
-  font-size: 1em;
-  color: #333333;
-}
-/* line 103, ../../templates/_source/sass/styles.scss */
-.container.fancybox .prev, .container.fancybox .next {
-  background: url(../img/gallery_sprite.png) no-repeat 0 0;
-}
-/* line 106, ../../templates/_source/sass/styles.scss */
-.container.fancybox .next {
-  background-position: -513px 0;
 }
