--- a/templates/_source/category.haml
+++ b/templates/_source/category.haml
@@ -5,11 +5,11 @@
     %ul.breadcrumb
         %li
             %a{:href=>"/"}
-    %h2 Portfolio
+    %h2 Category
     .product-list
         {% for product in products %}
         %a.item{:href=>"/{{ product.fields.category }}/{{ product.fields.name }}.html",:rel=>"gallery"}
-            %img{:width=>"145",:src=>"http://50.116.1.212:9000/uploads/{{ product.fields.image }}"}       
+            %img{:src=>"http://50.116.1.212:9000/uploads/{{ product.fields.image }}"}       
 
         {% endfor %}
         //%a.item{:href=>"item.html",:rel=>"gallery"}
