--- a/templates/_source/index.haml
+++ b/templates/_source/index.haml
@@ -1,9 +1,5 @@
 {% extends 'templates/base.html' %}
-
 {% block content %}
 .content
-    .home-slide{:onclick=>"javascript: window.location='/portfolio'"}
-        %h2 Imaginando un nuevo mundo de macrame!
-    .avatar-bio
-        %a{:href=>"/bio", :title=>"Mini Biografia sobre Merlina Textil"}
+    %h2 Welcome to Catalog!
 {% endblock %}
