--- a/templates/category.html
+++ b/templates/category.html
@@ -6,11 +6,11 @@
       <a href='/'></a>
     </li>
   </ul>
-  <h2>Portfolio</h2>
+  <h2>Category</h2>
   <div class='product-list'>
     {% for product in products %}
     <a class='item' href='/{{ product.fields.category }}/{{ product.fields.name }}.html' rel='gallery'>
-      <img src='http://50.116.1.212:9000/uploads/{{ product.fields.image }}' width='145' />
+      <img src='http://50.116.1.212:9000/uploads/{{ product.fields.image }}' />
     </a>
     {% endfor %}
     <!-- /%a.item{:href=>"item.html",:rel=>"gallery"} -->
