--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,6 @@
 {% extends 'templates/base.html' %}
 {% block content %}
 <div class='content'>
-  <div class='home-slide' onclick="javascript: window.location='/portfolio'">
-    <h2>Imaginando un nuevo mundo de macrame!</h2>
-  </div>
-  <div class='avatar-bio'>
-    <a href='/bio' title='Mini Biografia sobre Merlina Textil'></a>
-  </div>
+  <h2>Welcome to Catalog!</h2>
 </div>
 {% endblock %}
