suscribir/actualizar usuario

--- a/templates/_source/header/head.haml
+++ b/templates/_source/header/head.haml
@@ -3,5 +3,5 @@
 %head
     %title Titulo
     %base{:href=>"/"}
-    %link{:href=>"css/styles.css", :media=>"screen", :rel=>"stylesheet"}
+    %link{:href=>"static/css/styles.css", :media=>"screen", :rel=>"stylesheet"}
 
