--- a/templates/forms/landing_form.html
+++ b/templates/forms/landing_form.html
@@ -1,9 +1,37 @@
-<form class='form'>
+<form class='form' id='suscribeForm'>
   <div class='field text'>
-    <input type='text'>
+    <input id='fieldEmail' type='text'>
       <div class='action subscribe'>
-        <input type='submit' />
+        <input id='suscribeBtn' type='submit' />
       </div>
     </input>
   </div>
 </form>
+<script type='text/javascript'>
+  //<![CDATA[
+    var gel = function (eid){ return document.getElementById(eid) };
+    
+    var form = gel("suscribeForm");
+    var url = "http://localhost:9000/api/core/rpc/";
+    var xmlhttp = new XMLHttpRequest();
+    
+    function handleResponse() {
+      console.log("readystatechange!")
+        if (xmlhttp.readyState==4 && xmlhttp.status==200) {
+            console.log('response: "' + xmlhttp.responseText + '"');
+            eval('var r=' + xmlhttp.responseText);
+            eval('var res =' + r.result);
+            console.log(res[0].fields.email);
+        }    
+    }
+    
+    form.onsubmit = function() {
+      var jsonstr = '{"method":"addUser","params":["' + gel("fieldEmail").value + '"],"id":1}' ;
+      xmlhttp.open("POST", url, true);
+      xmlhttp.setRequestHeader("Content-Type","application/x-www-form-urlencoded");
+      xmlhttp.onreadystatechange = handleResponse;
+      xmlhttp.send(email=jsonstr);
+      return false;
+    }
+  //]]>
+</script>
