--- a/templates/_source/base/base.haml
+++ b/templates/_source/base/base.haml
@@ -1,6 +1,7 @@
 {% include "templates/header/head.html" %}
 %body.main 
-    {% include "templates/header/header.html" %}
-
-    {% block content %}
-    {% endblock %}
+    .container
+        {% include "templates/header/header.html" %}
+    
+        {% block content %}
+        {% endblock %}
