--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -1,6 +1,8 @@
 {% include "templates/header/head.html" %}
 <body class='main'>
-  {% include "templates/header/header.html" %}
-  {% block content %}
-  {% endblock %}
+  <div class='container'>
+    {% include "templates/header/header.html" %}
+    {% block content %}
+    {% endblock %}
+  </div>
 </body>
