--- a/templates/content/cms_content_header.html
+++ b/templates/content/cms_content_header.html
@@ -1,2 +1,2 @@
-<h2>Welcome!</h2>
-<h3>Blablabla your email</h3>
+<h2>Subscripción</h2>
+<h3>Te enviaremos novedades una vez por mes, no molestamos :)</h3>
