--- a/templates/header/head.html
+++ b/templates/header/head.html
@@ -4,4 +4,22 @@
   <title>Titulo</title>
   <base href='/' />
   <link href='static/css/styles.css' media='screen' rel='stylesheet' />
+  <meta content='width=device-width, initial-scale = 1.0,maximum-scale = 1.0' name='viewport' />
+  <script type='text/javascript'>
+    //<![CDATA[
+      var updatevp = function(){
+          /*
+           *  TODO: revisar y optimizar el calculo 
+           */
+          var fontSize = window.innerWidth / 10 + (window.innerHeight / 40);
+          if( typeof(document.body) != null) {
+              if(fontSize < 105 && fontSize > 20) {
+                document.body.style.fontSize=fontSize + "%";
+              }
+          }
+      }       
+      window.onload=updatevp;
+      window.onresize=updatevp;
+    //]]>
+  </script>
 </head>
