--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,7 +2,7 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 17, c:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -24,64 +24,53 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 20, c:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 20, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 body {
   line-height: 1;
 }
 
-/* line 22, c:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 24, c:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 26, c:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 28, c:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 101, c:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 101, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 30, c:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 114, c:/Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 114, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block;
 }
 
-/* 960 Grid System ~ Core CSS.
- * Learn more ~ http://960.gs/
- *
- * Licensed under GPL and MIT.
- */
-/* line 13, c:/xampp/htdocs/ufront/templates/_source/sass/_grid.scss */
-.container {
-  margin-left: auto;
-  margin-right: auto;
-  width: 934px;
-}
-
-/* line 5, c:/xampp/htdocs/ufront/templates/_source/sass/_text.scss */
+/* line 6, ../../templates/_source/sass/_text.scss */
 body {
-  font-family: Arial;
+  font-family: arial;
+  font-size: 62.5%;
 }
 
 @font-face {
@@ -98,4 +87,101 @@ body {
   src: url("../fonts/helveticaltstd-blkcond-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/helveticaltstd-blkcond-webfont.woff") format("woff"), url("../fonts/helveticaltstd-blkcond-webfont.ttf") format("truetype"), url("../fonts/helveticaltstd-blkcond-webfont.svg#HelveticaLTStdBlackCondensed") format("svg");
   font-weight: normal;
   font-style: normal;
+}
+
+/* line 7, ../../templates/_source/sass/_layout.scss */
+h2 {
+  margin: 0.125em 0;
+}
+
+/* line 10, ../../templates/_source/sass/_layout.scss */
+h3 {
+  margin: 0.25em 0;
+}
+
+/* line 14, ../../templates/_source/sass/_layout.scss */
+.container {
+  max-width: 960px;
+  margin: 0 auto;
+  width: 90%;
+}
+
+/* line 1, ../../templates/_source/sass/_content.scss */
+h2 {
+  line-height: 140%;
+  font-family: 'HelveticaLTStdBlackCondensed';
+  font-size: 7em;
+  letter-spacing: -0.075em;
+}
+
+/* line 4, ../../templates/_source/sass/_content.scss */
+h3 {
+  line-height: 140%;
+  font-size: 3em;
+  letter-spacing: -0.075em;
+}
+
+/*
+ * El mixin stdform deberaa tener parametros (ej: compact, normal, extended)
+ * que modifiquen la estructura o estilos del mismo.
+ */
+/* line 18, ../../templates/_source/sass/styles.scss */
+body {
+  background: #f7f7f7;
+  text-align: center;
+}
+
+/* line 25, ../../templates/_source/sass/styles.scss */
+.form {
+  overflow: hidden;
+  margin: 2em auto;
+}
+/* line 12, ../../templates/_source/sass/_forms.scss */
+.form .field.text input[type=text],
+.form .action input {
+  padding: 0.5em;
+  line-height: 140%;
+  font-size: 2.3em;
+  letter-spacing: -0.05em;
+  width: 100%;
+}
+/* line 17, ../../templates/_source/sass/_forms.scss */
+.form .field.text input[type=text] {
+  background: white;
+  border: 1px solid #5fbcf9;
+  color: #cccccc;
+}
+/* line 21, ../../templates/_source/sass/_forms.scss */
+.form .field.text input[type=text].alert {
+  color: #999999;
+}
+/* line 25, ../../templates/_source/sass/_forms.scss */
+.form .field.text input[type=text].changed {
+  color: black;
+}
+/* line 28, ../../templates/_source/sass/_forms.scss */
+.form .action {
+  width: 38%;
+  float: left;
+}
+/* line 31, ../../templates/_source/sass/_forms.scss */
+.form .action input {
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #29a6f7), color-stop(100%, #5fbcf9));
+  background-image: -webkit-linear-gradient(#29a6f7, #5fbcf9);
+  background-image: -moz-linear-gradient(#29a6f7, #5fbcf9);
+  background-image: -o-linear-gradient(#29a6f7, #5fbcf9);
+  background-image: -ms-linear-gradient(#29a6f7, #5fbcf9);
+  background-image: linear-gradient(#29a6f7, #5fbcf9);
+  border: 1px solid #29a6f7;
+  color: white;
+}
+/* line 37, ../../templates/_source/sass/_forms.scss */
+.form .field.text {
+  float: left;
+  width: 62%;
+}
+/* line 28, ../../templates/_source/sass/styles.scss */
+.form .field.text input[type=text],
+.form .action input {
+  text-transform: lowercase;
 }
