--- a/templates/_source/sass/_text.scss
+++ b/templates/_source/sass/_text.scss
@@ -1,30 +1,46 @@
-@import "colors" ;
-
 $base-line-height: 140% ; 
+$base-letter-spacing: -0.05em ; 
+$base-font: arial ; 
+$base-font-size: 62.5%;
 
-body {
-     font-family: Arial ;
+body { 
+   font-family: $base-font ; 
+   font-size: $base-font-size;
+}
+@mixin baseType { 
+  line-height: $base-line-height ;  
 }
 
-@mixin foreground0 {
-    line-height: $base-line-height ; 
+// Type 1
+@mixin domType1 {
+  @include baseType;
+  font-size: 2.3em ;
+  letter-spacing: $base-letter-spacing ;
+}
+@mixin subType1 {
+  @include baseType;
+  font-size: 3em ;
+  letter-spacing: $base-letter-spacing*1.5;
+}
+@mixin empType1 {
+  @include baseType;
+  font-family: 'HelveticaLTStdBlackCondensed' ;
+  font-size: 7em ;
+  letter-spacing: $base-letter-spacing*1.5;
 }
 
-@mixin foreground1 { 
+
+// Type 2
+@mixin empType2 { 
+   @include baseType;
    font-family: 'FiveMinutesRegular' ;
    font-size: 4em;
    text-decoration: none;
    text-shadow: 0px 0px 1px $text1;
-   color: $text1 ;
 }
 
-@mixin foreground2 {
-  font-family: 'HelveticaLTStdBlackCondensed' ;
-  color: $text3 ;
-  font-size: 1.6em ;
-  letter-spacing: -0.6pt ;
-}
 
+// Font-face sources
 @font-face {
     font-family: 'FiveMinutesRegular';
     src: url('../fonts/five_minutes-webfont.eot');
@@ -34,9 +50,7 @@ body {
          url('../fonts/five_minutes-webfont.svg#FiveMinutesRegular') format('svg');
     font-weight: normal;
     font-style: normal;
-
 }
-
 @font-face {
     font-family: 'HelveticaLTStdBlackCondensed';
     src: url('../fonts/helveticaltstd-blkcond-webfont.eot');
@@ -46,5 +60,4 @@ body {
          url('../fonts/helveticaltstd-blkcond-webfont.svg#HelveticaLTStdBlackCondensed') format('svg');
     font-weight: normal;
     font-style: normal;
-
 }
