--- a/templates/_source/sass/styles.scss
+++ b/templates/_source/sass/styles.scss
@@ -1,18 +1,31 @@
-<<<<<<< HEAD
 /* Welcome to Compass.
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
 @import "compass/reset" ;
-@import "layout" ;
-@import "text" ;
-@import "forms" ;
 @import "compass/css3" ;
+@import "colors" ;
+@import "text" ;
+@import "layout" ;
+@import "content" ;
+@import "forms" ;
 
 @mixin base-anchor {
     text-decoration: none ;
 }
-=======
- 
->>>>>>> cf7fb754f4b22ca56a71ddc1ee49417a18a734d8
+
+body {
+  background: $subColor1B;
+  text-align: center ;
+}
+
+// forms
+
+.form { 
+  @include stdform ; 
+  .field.text input[type=text],
+  .action input {
+      text-transform: lowercase ; 
+  }
+}
