--- a/templates/header/head.html
+++ b/templates/header/head.html
@@ -5,16 +5,22 @@
   <base href='/' />
   <link href='static/css/styles.css' media='screen' rel='stylesheet' />
   <meta content='width=device-width, initial-scale = 1.0,maximum-scale = 1.0' name='viewport' />
+  <script src='static/js/jquery.js' type='text/javascript'></script>
+  <script src='static/js/mootor.js' type='text/javascript'></script>
   <script type='text/javascript'>
     //<![CDATA[
       var updatevp = function(){
           /*
-           *  TODO: revisar y optimizar el calculo 
+           *  FIXME: optimize calc 
            */
           var fontSize = window.innerWidth / 10 + (window.innerHeight / 40);
           if( typeof(document.body) != null) {
               if(fontSize < 105 && fontSize > 20) {
                 document.body.style.fontSize=fontSize + "%";
+              } else if(fontSize >= 105) {
+                document.body.style.fontSize=105 + "%";                  
+              } else if(fontSize <= 20) {
+                document.body.style.fontSize=20 + "%";                  
               }
           }
       }       
