limpieza de archivos sin uso, comentarios

--- a/templates/_source/forms/landing_form.haml
+++ b/templates/_source/forms/landing_form.haml
@@ -1,7 +1,9 @@
 %form.form#suscribeForm
     .field.text
+        / FIXME: lang
         %input#fieldEmail{:type=>"text",:value=>"correo electrónico"}
     .action.subscribe
+        / FIXME: lang
         %input#suscribeBtn{:type=>"submit",:value=>"Suscribirse"}
 
 :javascript
