--- a/templates/forms/landing_form.html
+++ b/templates/forms/landing_form.html
@@ -1,8 +1,10 @@
 <form class='form' id='suscribeForm'>
   <div class='field text'>
+    <!-- FIXME: lang -->
     <input id='fieldEmail' type='text' value='correo electrónico' />
   </div>
   <div class='action subscribe'>
+    <!-- FIXME: lang -->
     <input id='suscribeBtn' type='submit' value='Suscribirse' />
   </div>
 </form>
