Comienzo implementacion de Catalog.Gallery (galeria de productos)

--- a/templates/_source/home/index.haml
+++ b/templates/_source/home/index.haml
@@ -2,6 +2,7 @@
 
 {% block content %}
 .content
+    {% include "templates/catalog/gallery.html" %}
     {% include "templates/content/cms_content_header.html" %}
     {% include "templates/forms/landing_form.html" %}
 {% endblock %}
