Limpieza de archivos sin uso (eran parte de la estructura de estilos y plantillas pero estaban vacios) Reorganizacion de algunas plantillas para simplificar su entendimiento Base del JavaScript para inicializar Mootor e iniciar un catalogo/galeria de imagenes + form de subscripcion

--- a/templates/_source/sass/_forms.scss
+++ b/templates/_source/sass/_forms.scss
@@ -29,7 +29,7 @@
         width: 38% ;
         float: left ;
         input {
-            @include linear-gradient($empColor2, $empColor2B); 
+            @include background(linear-gradient($empColor2, $empColor2B)); 
             border: 1px solid $empColor2B;
             color: $subColor1;
         }
