--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,7 +2,7 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 17, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../../../home/nn/.rvm/gems/ruby-1.9.3-p0/gems/compass-0.11.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -24,45 +24,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 20, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 20, ../../../../../home/nn/.rvm/gems/ruby-1.9.3-p0/gems/compass-0.11.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 body {
   line-height: 1;
 }
 
-/* line 22, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../home/nn/.rvm/gems/ruby-1.9.3-p0/gems/compass-0.11.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 24, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../home/nn/.rvm/gems/ruby-1.9.3-p0/gems/compass-0.11.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 26, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../home/nn/.rvm/gems/ruby-1.9.3-p0/gems/compass-0.11.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 28, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../home/nn/.rvm/gems/ruby-1.9.3-p0/gems/compass-0.11.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 101, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 101, ../../../../../home/nn/.rvm/gems/ruby-1.9.3-p0/gems/compass-0.11.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 30, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../home/nn/.rvm/gems/ruby-1.9.3-p0/gems/compass-0.11.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 114, ../../../../../Ruby193/lib/ruby/gems/1.9.1/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 114, ../../../../../home/nn/.rvm/gems/ruby-1.9.3-p0/gems/compass-0.11.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block;
 }
@@ -89,49 +89,39 @@ body {
   font-style: normal;
 }
 
-/* line 7, ../../templates/_source/sass/_layout.scss */
+/* line 4, ../../templates/_source/sass/_layout.scss */
 h2 {
   margin: 0.125em 0;
 }
 
-/* line 10, ../../templates/_source/sass/_layout.scss */
+/* line 7, ../../templates/_source/sass/_layout.scss */
 h3 {
   margin: 0.25em 0;
 }
 
-/* line 14, ../../templates/_source/sass/_layout.scss */
+/* line 11, ../../templates/_source/sass/_layout.scss */
 .container {
   max-width: 960px;
   margin: 0 auto;
   width: 90%;
 }
 
-/* line 1, ../../templates/_source/sass/_content.scss */
-h2 {
-  line-height: 140%;
-  font-family: 'HelveticaLTStdBlackCondensed';
-  font-size: 7em;
-  letter-spacing: -0.075em;
-}
-
-/* line 4, ../../templates/_source/sass/_content.scss */
-h3 {
-  line-height: 140%;
-  font-size: 3em;
-  letter-spacing: -0.075em;
+/* line 19, ../../templates/_source/sass/_layout.scss */
+.catalog .item {
+  width: 100%;
 }
 
 /*
  * El mixin stdform deberaa tener parametros (ej: compact, normal, extended)
  * que modifiquen la estructura o estilos del mismo.
  */
-/* line 18, ../../templates/_source/sass/styles.scss */
+/* line 17, ../../templates/_source/sass/styles.scss */
 body {
   background: #f7f7f7;
   text-align: center;
 }
 
-/* line 25, ../../templates/_source/sass/styles.scss */
+/* line 24, ../../templates/_source/sass/styles.scss */
 .form {
   overflow: hidden;
   margin: 2em auto;
@@ -166,12 +156,12 @@ body {
 }
 /* line 31, ../../templates/_source/sass/_forms.scss */
 .form .action input {
-  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #29a6f7), color-stop(100%, #5fbcf9));
-  background-image: -webkit-linear-gradient(#29a6f7, #5fbcf9);
-  background-image: -moz-linear-gradient(#29a6f7, #5fbcf9);
-  background-image: -o-linear-gradient(#29a6f7, #5fbcf9);
-  background-image: -ms-linear-gradient(#29a6f7, #5fbcf9);
-  background-image: linear-gradient(#29a6f7, #5fbcf9);
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #5fbcf9), color-stop(100%, #29a6f7));
+  background: -webkit-linear-gradient(#5fbcf9, #29a6f7);
+  background: -moz-linear-gradient(#5fbcf9, #29a6f7);
+  background: -o-linear-gradient(#5fbcf9, #29a6f7);
+  background: -ms-linear-gradient(#5fbcf9, #29a6f7);
+  background: linear-gradient(#5fbcf9, #29a6f7);
   border: 1px solid #29a6f7;
   color: white;
 }
@@ -180,8 +170,23 @@ body {
   float: left;
   width: 62%;
 }
-/* line 28, ../../templates/_source/sass/styles.scss */
+/* line 27, ../../templates/_source/sass/styles.scss */
 .form .field.text input[type=text],
 .form .action input {
   text-transform: lowercase;
+}
+
+/* line 32, ../../templates/_source/sass/styles.scss */
+h2 {
+  line-height: 140%;
+  font-family: 'HelveticaLTStdBlackCondensed';
+  font-size: 7em;
+  letter-spacing: -0.075em;
+}
+
+/* line 35, ../../templates/_source/sass/styles.scss */
+h3 {
+  line-height: 140%;
+  font-size: 3em;
+  letter-spacing: -0.075em;
 }
