--- a/templates/_source/index.haml
+++ b/templates/_source/index.haml
@@ -3,7 +3,7 @@
 .content
     #panel1
         {% include "templates/catalog/gallery.html" %}
-    #panel2
+    #panel2.subscribe
         {% include "templates/content/cms_content_header.html" %}
         {% include "templates/forms/landing_form.html" %}
     :javascript
