--- a/templates/_source/sass/styles.scss
+++ b/templates/_source/sass/styles.scss
@@ -19,7 +19,12 @@ body {
   text-align: center ;
 }
 
-// forms
+// Subscribe
+
+.subscribe {
+  width: 90% ;
+  margin: 0 auto ;
+}
 
 .form { 
   @include stdform ; 
