--- a/templates/_source/header/head.haml
+++ b/templates/_source/header/head.haml
@@ -6,6 +6,7 @@
     %link{:href=>"static/css/styles.css", :media=>"screen", :rel=>"stylesheet"}
     %meta{:name=>"viewport",:content=>"width=device-width, initial-scale = 1.0,maximum-scale = 1.0"}
     %script{:src=>"static/js/jquery.js",:type=>"text/javascript"}
+    %script{:src=>"static/js/jquery.mobile.js",:type=>"text/javascript"}
     %script{:src=>"static/js/mootor.js",:type=>"text/javascript"}
     :javascript
         var updatevp = function(){
