--- a/templates/header/head.html
+++ b/templates/header/head.html
@@ -6,6 +6,7 @@
   <link href='static/css/styles.css' media='screen' rel='stylesheet' />
   <meta content='width=device-width, initial-scale = 1.0,maximum-scale = 1.0' name='viewport' />
   <script src='static/js/jquery.js' type='text/javascript'></script>
+  <script src='static/js/jquery.mobile.js' type='text/javascript'></script>
   <script src='static/js/mootor.js' type='text/javascript'></script>
   <script type='text/javascript'>
     //<![CDATA[
