--- a/templates/_source/catalog/gallery.haml
+++ b/templates/_source/catalog/gallery.haml
@@ -1,12 +1,12 @@
 .catalog#productGallery
 
 :javascript
-    $(document).ready(function(){
+    /*$(document).ready(function(){
         $("#productGallery").Catalog({
             type: "Gallery",
             category: "test",
         });
-    });
+    });*/
 
 
 
