--- a/templates/_source/forms/landing_form.haml
+++ b/templates/_source/forms/landing_form.haml
@@ -7,13 +7,13 @@
         %input#suscribeBtn{:type=>"submit",:value=>"Suscribirse"}
 
 :javascript
-    $(document).ready(function(){
+    /*$(document).ready(function(){
         $("#suscribeForm").Form({
             type: "Subscribe",
             fields: $("#fieldEmail"),
             actions: $("#suscribeBtn"),
         });
-    });
+    });*/
 
 
 
