--- a/templates/forms/landing_form.html
+++ b/templates/forms/landing_form.html
@@ -10,12 +10,12 @@
 </form>
 <script type='text/javascript'>
   //<![CDATA[
-    $(document).ready(function(){
+    /*$(document).ready(function(){
         $("#suscribeForm").Form({
             type: "Subscribe",
             fields: $("#fieldEmail"),
             actions: $("#suscribeBtn"),
         });
-    });
+    });*/
   //]]>
 </script>
