--- a/templates/_source/base/default.haml
+++ b/templates/_source/base/default.haml
@@ -1,7 +1,11 @@
-{% include "templates/header/head.html" %}
+!!! XML
+!!!
+%head
+    %title Subscripción
+    %base{:href=>"/"}
+    %meta{:name=>"viewport", :content=>"initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"}
+    %link{:href=>"static/css/styles.css", :media=>"screen",  :rel=>"stylesheet"}
+    %script{:src=>"static/js/mootor.js",:type=>"text/javascript"}
 %body.main 
-    .container
-        {% include "templates/header/header.html" %}
-    
-        {% block content %}
-        {% endblock %}
+{% block content %}
+{% endblock %}
