--- a/templates/_source/sass/_text.scss
+++ b/templates/_source/sass/_text.scss
@@ -24,7 +24,7 @@ body {
 }
 @mixin empType1 {
   @include baseType;
-  font-family: 'HelveticaLTStdBlackCondensed' ;
+  font-family: 'HelveticaLTStdBlackCondensed', arial ;
   font-size: 7em ;
   letter-spacing: $base-letter-spacing*1.5;
 }
