- Trancisiones entre paneles, simples y con aceleracion de hardware - Hay que revisar la forma en que se crean las instancias, esta   mal armado

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,204 +1,1 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 17, ../../../../../home/nn/.rvm/gems/ruby-1.9.3-p0/gems/compass-0.11.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-/* line 20, ../../../../../home/nn/.rvm/gems/ruby-1.9.3-p0/gems/compass-0.11.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-body {
-  line-height: 1;
-}
-
-/* line 22, ../../../../../home/nn/.rvm/gems/ruby-1.9.3-p0/gems/compass-0.11.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-ol, ul {
-  list-style: none;
-}
-
-/* line 24, ../../../../../home/nn/.rvm/gems/ruby-1.9.3-p0/gems/compass-0.11.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-/* line 26, ../../../../../home/nn/.rvm/gems/ruby-1.9.3-p0/gems/compass-0.11.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-caption, th, td {
-  text-align: left;
-  font-weight: normal;
-  vertical-align: middle;
-}
-
-/* line 28, ../../../../../home/nn/.rvm/gems/ruby-1.9.3-p0/gems/compass-0.11.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-q, blockquote {
-  quotes: none;
-}
-/* line 101, ../../../../../home/nn/.rvm/gems/ruby-1.9.3-p0/gems/compass-0.11.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-q:before, q:after, blockquote:before, blockquote:after {
-  content: "";
-  content: none;
-}
-
-/* line 30, ../../../../../home/nn/.rvm/gems/ruby-1.9.3-p0/gems/compass-0.11.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-a img {
-  border: none;
-}
-
-/* line 114, ../../../../../home/nn/.rvm/gems/ruby-1.9.3-p0/gems/compass-0.11.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
-  display: block;
-}
-
-/* line 6, ../../templates/_source/sass/_text.scss */
-body {
-  font-family: arial;
-  font-size: 62.5%;
-}
-
-@font-face {
-  font-family: 'FiveMinutesRegular';
-  src: url("../fonts/five_minutes-webfont.eot");
-  src: url("../fonts/five_minutes-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/five_minutes-webfont.woff") format("woff"), url("../fonts/five_minutes-webfont.ttf") format("truetype"), url("../fonts/five_minutes-webfont.svg#FiveMinutesRegular") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'HelveticaLTStdBlackCondensed';
-  src: url("../fonts/helveticaltstd-blkcond-webfont.eot");
-  src: url("../fonts/helveticaltstd-blkcond-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/helveticaltstd-blkcond-webfont.woff") format("woff"), url("../fonts/helveticaltstd-blkcond-webfont.ttf") format("truetype"), url("../fonts/helveticaltstd-blkcond-webfont.svg#HelveticaLTStdBlackCondensed") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-
-/* line 4, ../../templates/_source/sass/_layout.scss */
-h2 {
-  margin: 0.125em 0;
-}
-
-/* line 7, ../../templates/_source/sass/_layout.scss */
-h3 {
-  margin: 0.25em 0;
-}
-
-/* line 11, ../../templates/_source/sass/_layout.scss */
-.container {
-  width: 100%;
-}
-
-@media (min-width:1240px) {
-  /* line 16, ../../templates/_source/sass/_layout.scss */
-  .container {
-    max-width: 960px;
-    width: auto;
-    margin: 0 auto;
-  }
-}
-/* line 25, ../../templates/_source/sass/_layout.scss */
-.catalog .item {
-  width: 100%;
-}
-
-/*
- * El mixin stdform deberaa tener parametros (ej: compact, normal, extended)
- * que modifiquen la estructura o estilos del mismo.
- */
-/* line 17, ../../templates/_source/sass/styles.scss */
-body {
-  background: #f7f7f7;
-  text-align: center;
-}
-
-/* line 24, ../../templates/_source/sass/styles.scss */
-.subscribe {
-  width: 90%;
-  margin: 0 auto;
-}
-
-/* line 29, ../../templates/_source/sass/styles.scss */
-.form {
-  overflow: hidden;
-  margin: 2em auto;
-}
-/* line 12, ../../templates/_source/sass/_forms.scss */
-.form .field.text input[type=text],
-.form .action input {
-  padding: 0.5em;
-  line-height: 140%;
-  font-size: 2.3em;
-  letter-spacing: -0.05em;
-  width: 100%;
-}
-/* line 17, ../../templates/_source/sass/_forms.scss */
-.form .field.text input[type=text] {
-  background: white;
-  border: 1px solid #5fbcf9;
-  color: #cccccc;
-}
-/* line 21, ../../templates/_source/sass/_forms.scss */
-.form .field.text input[type=text].alert {
-  color: #999999;
-}
-/* line 25, ../../templates/_source/sass/_forms.scss */
-.form .field.text input[type=text].changed {
-  color: black;
-}
-/* line 28, ../../templates/_source/sass/_forms.scss */
-.form .action {
-  width: 38%;
-  float: left;
-}
-/* line 31, ../../templates/_source/sass/_forms.scss */
-.form .action input {
-  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #5fbcf9), color-stop(100%, #29a6f7));
-  background: -webkit-linear-gradient(#5fbcf9, #29a6f7);
-  background: -moz-linear-gradient(#5fbcf9, #29a6f7);
-  background: -o-linear-gradient(#5fbcf9, #29a6f7);
-  background: -ms-linear-gradient(#5fbcf9, #29a6f7);
-  background: linear-gradient(#5fbcf9, #29a6f7);
-  border: 1px solid #29a6f7;
-  color: white;
-}
-/* line 37, ../../templates/_source/sass/_forms.scss */
-.form .field.text {
-  float: left;
-  width: 62%;
-}
-/* line 32, ../../templates/_source/sass/styles.scss */
-.form .field.text input[type=text],
-.form .action input {
-  text-transform: lowercase;
-}
-
-/* line 37, ../../templates/_source/sass/styles.scss */
-h2 {
-  line-height: 140%;
-  font-family: 'HelveticaLTStdBlackCondensed', arial;
-  font-size: 7em;
-  letter-spacing: -0.075em;
-}
-
-/* line 40, ../../templates/_source/sass/styles.scss */
-h3 {
-  line-height: 140%;
-  font-size: 3em;
-  letter-spacing: -0.075em;
-}
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}body{line-height:1}ol,ul{list-style:none}table{border-collapse:collapse;border-spacing:0}caption,th,td{text-align:left;font-weight:normal;vertical-align:middle}q,blockquote{quotes:none}q:before,q:after,blockquote:before,blockquote:after{content:"";content:none}a img{border:none}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary{display:block}body{font-family:arial;font-size:62.5%}@font-face{font-family:'FiveMinutesRegular';src:url("../fonts/five_minutes-webfont.eot");src:url("../fonts/five_minutes-webfont.eot?#iefix") format("embedded-opentype"),url("../fonts/five_minutes-webfont.woff") format("woff"),url("../fonts/five_minutes-webfont.ttf") format("truetype"),url("../fonts/five_minutes-webfont.svg#FiveMinutesRegular") format("svg");font-weight:normal;font-style:normal}@font-face{font-family:'HelveticaLTStdBlackCondensed';src:url("../fonts/helveticaltstd-blkcond-webfont.eot");src:url("../fonts/helveticaltstd-blkcond-webfont.eot?#iefix") format("embedded-opentype"),url("../fonts/helveticaltstd-blkcond-webfont.woff") format("woff"),url("../fonts/helveticaltstd-blkcond-webfont.ttf") format("truetype"),url("../fonts/helveticaltstd-blkcond-webfont.svg#HelveticaLTStdBlackCondensed") format("svg");font-weight:normal;font-style:normal}h2{margin:0.125em 0}.subscribe h2{margin:0}h3{margin:0.25em 0}#panels,#blank_panel,.panel{position:absolute;left:0;top:0;-moz-box-shadow:0px 5px 5px rgba(0,0,0,0.5);-webkit-box-shadow:0px 5px 5px rgba(0,0,0,0.5);-o-box-shadow:0px 5px 5px rgba(0,0,0,0.5);box-shadow:0px 5px 5px rgba(0,0,0,0.5)}@media (min-width:1240px){.container{max-width:960px;width:auto;margin:0 auto}}.catalog .item{width:100%}body{text-align:center}#panels,body{background:#333}#blank_panel,.panel{background:#f7f7f7}.subscribe{width:90%;margin:0 auto}.form{overflow:hidden;margin:2em auto}.form .field.text input[type=text],.form .action input{padding:0.5em;line-height:140%;font-size:2.3em;letter-spacing:-0.05em;width:100%}.form .field.text input[type=text]{background:#fff;border:1px solid #5fbcf9;color:#ccc}.form .field.text input[type=text].alert{color:#999}.form .field.text input[type=text].changed{color:#000}.form .action{width:38%;float:left}.form .action input{background:-webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #5fbcf9), color-stop(100%, #29a6f7));background:-webkit-linear-gradient(#5fbcf9,#29a6f7);background:-moz-linear-gradient(#5fbcf9,#29a6f7);background:-o-linear-gradient(#5fbcf9,#29a6f7);background:-ms-linear-gradient(#5fbcf9,#29a6f7);background:linear-gradient(#5fbcf9,#29a6f7);border:1px solid #29a6f7;color:#fff}.form .field.text{float:left;width:62%}.form .field.text input[type=text],.form .action input{text-transform:lowercase}h2{line-height:140%;font-family:'HelveticaLTStdBlackCondensed', arial;font-size:7em;letter-spacing:-0.075em}h3{line-height:140%;font-size:3em;letter-spacing:-0.075em}
