--- a/templates/_source/base/default.haml
+++ b/templates/_source/base/default.haml
@@ -7,5 +7,6 @@
     %link{:href=>"static/css/styles.css", :media=>"screen",  :rel=>"stylesheet"}
     %script{:src=>"static/js/mootor.js",:type=>"text/javascript"}
 %body.main 
-{% block content %}
-{% endblock %}
+    #panels
+        {% block content %}
+        {% endblock %}
