--- a/templates/_source/sass/_colors.scss
+++ b/templates/_source/sass/_colors.scss
@@ -1,12 +1,12 @@
 @charset "utf-8";
 
-// Dominantes
+// Dominants
 
 $domColor1: #000;     // negro
 $domColor1B: #333;    // gris
 $domColor1C: #666;    // gris claro
 
-// Subordinados
+// Subordinated
 
 $subColor1: #fff;     // blanco
 $subColor1B: #f7f7f7; // gris claro
@@ -14,11 +14,14 @@ $subColor2: #7BBED6;  // celeste
 $subColor3: #F7D77B;  // amarillo
 $subColor4: #EFDFCE;  // amarillo claro
 
-// Énfasis
+// Emphasis
 
 $empColor1: #FF3031;  // rojo claro
 $empColor1B: #911E17; // rojo
 $empColor2: #5FBCF9;  // celeste claro
 $empColor2B: #29A6F7; // celeste
 
+// System
+
+$bodyColor: #333;
 
