Base para la implementacion de un patron JavaScript "Sandbox", con modulos que se cargan a pedido.

--- a/templates/_source/index.haml
+++ b/templates/_source/index.haml
@@ -11,21 +11,21 @@
     .catalog
         %div
             %img.item{:src=>"http://192.168.1.12:9000/uploads/products/joey-ramone_1.jpg"}
-
+ 
 :javascript
     
-    $().ready(function(){
+       //$(document).ext.ready(function(){
 
        // Dynamic font size
        //$("#panels").Fx.dynamicType();
 
        // Navigation panels
-       $("#panels").Nav.Panels();
+       //$("#panels").ext.Nav.Panels();
        
        // FIXME: al cambiar la forma de cargar el modulo Nav.Panels 
        //        hay que revisar todos los modulos para ver su
        //        compatibilidad.
 
-    });
+    //});
 {% endblock %}
 
