--- a/templates/_source/index.haml
+++ b/templates/_source/index.haml
@@ -14,7 +14,8 @@
  
 :javascript
     
-       $(document).pageInit();
+       // Initialize page    
+       $(document).pageInit();       
        
        $(document).ready(function(){
 
