imagenes para demo

--- a/_source/html/index.haml
+++ b/_source/html/index.haml
@@ -16,19 +16,19 @@
 
         .panel
             %div
-                %img{:src=>"http://192.168.1.11/ucore/uploads/products/1.jpg"}
+                %img{:src=>"upload/products/1.jpg"}
 
         .panel
             %div
-                %img{:src=>"http://192.168.1.11/ucore/uploads/products/2.jpg"}
+                %img{:src=>"upload/products/2.jpg"}
 
         .panel
             %div
-                %img{:src=>"http://192.168.1.11/ucore/uploads/products/3.jpg"}
+                %img{:src=>"upload/products/3.jpg"}
 
         .panel
             %div
-                %img{:src=>"http://192.168.1.11/ucore/uploads/products/4.jpg"}
+                %img{:src=>"upload/products/4.jpg"}
 
 
         .panel
